# cgtm

./: LICENSE  README.md  cgtm.cabal
src/Data/: Enumerable.hs  TM.hs
src/Data/TM/: Export.hs
src/Data/TM/Export/: IO.hs
test/: BitSucc.hs  BitSucc.rlx  BitSucc.txt  BitSuccGen.rlx  Spec.hs  SpecCG.hs
