name:                cgtm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wenkokke/cgtm#readme
license:             BSD3
license-file:        LICENSE
author:              Wen Kokke
maintainer:          wen.kokke@gmail.com
copyright:           (c) 2017 wen Kokke
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Enumerable
                     , Data.TM
                     , Data.TM.Export
                     , Data.TM.Export.IO
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , filepath
                     , process
                     , temporary
                     , text
  default-language:    Haskell2010

test-suite cgtm-spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       BitSucc
  main-is:             Spec.hs
  build-depends:       base
                     , cgtm
                     , text
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite cgtm-spec-cg
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       BitSucc
  main-is:             SpecCG.hs
  build-depends:       base
                     , cgtm
                     , text
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wenkokke/cgtm
